After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 758171 - qtdemux: Seeking in dashdemux broken since edit list changes
qtdemux: Seeking in dashdemux broken since edit list changes
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-good
git master
Other Linux
: Normal blocker
: 1.7.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2015-11-16 11:54 UTC by Sebastian Dröge (slomo)
Modified: 2015-11-17 13:00 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
qtdemux: only send initial gaps for non-fragmented streams (1.50 KB, patch)
2015-11-16 14:38 UTC, Thiago Sousa Santos
committed Details | Review

Description Sebastian Dröge (slomo) 2015-11-16 11:54:04 UTC
The fixes to bug #753484 broke seeking in dashdemux. E.g. try with gst-play-1.0 on http://dash.edgesuite.net/dash264/TestCases/1a/netflix/exMPD_BIP_TC1.mpd

Reverting 142d8e2d23e5602e7382977af1043d621625f8c8 makes it work again.
Comment 1 Thiago Sousa Santos 2015-11-16 14:38:01 UTC
Created attachment 315679 [details] [review]
qtdemux: only send initial gaps for non-fragmented streams

It would be unusual to have the header segment with an 'edts' atom
indicating gaps at the beginning when handling fragmented streams.

The header usually doesn't contain any timestamping information, this
should come from the playlist/manifest and the segments with media
in those scenarios.
Comment 2 Thiago Sousa Santos 2015-11-17 13:00:07 UTC
commit 8bcc733ceca037b1d680ddb21c0317b6f85fab19
Author: Thiago Santos <thiagoss@osg.samsung.com>
Date:   Mon Nov 16 10:58:32 2015 -0300

    qtdemux: only send initial gaps for non-fragmented streams
    
    It would be unusual to have the header segment with an 'edts' atom
    indicating gaps at the beginning when handling fragmented streams.
    
    The header usually doesn't contain any timestamping information, this
    should come from the playlist/manifest and the segments with media
    in those scenarios.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=758171